[package]
name = "aberp"
description = "ABERP binary — modular multi-tenant ERP backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# PR-7-B-3 split: the binary keeps the operator-facing entry point in
# `main.rs`, but the orchestration modules live in `lib.rs` so the
# integration tests under `apps/aberp/tests/` can import them via the
# library face. Cargo does not expose `src/main.rs`'s sibling modules
# to integration tests; the lib + bin split is the standard workaround.
[lib]
name = "aberp"
path = "src/lib.rs"

[[bin]]
name = "aberp"
path = "src/main.rs"

# S165 / prod-prep PR #1 — the compile-time production switch. Enabling
# `production` flips the NAV endpoint to the real `api.onlineszamla`
# host, lifts the dev-build prod-endpoint refusal gate, drops the
# `TEST-` invoice-number prefix, and arms the boot banner + tenant
# guard. COMPILE-TIME on purpose (no env override) so the compiler
# bakes the prod/test choice into the binary — hülye-biztos per the
# go-live ceremony. See `src/build_profile.rs`.
[features]
default = []
production = []

[dependencies]
# Workspace siblings — production deps. `aberp-audit-ledger` is included
# WITHOUT the `test-support` feature; that feature lives only in dev-
# dependencies (below) so the production binary cannot reach
# `Actor::test_only`. Closes fortnightly review F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger" }
# S426 / ADR-0082 — periodic validated logical DuckDB snapshot subsystem.
aberp-snapshot = { path = "../../crates/aberp-snapshot" }
# S344 / PR-38 — DigitalIdProvider swap-point. Boot constructs the mock
# (the only backend today) into `AppState.digital_id`; real backends slot
# in behind the trait in later sessions. See `[[defense-aerospace-pivot]]`.
aberp-digital-id = { path = "../../crates/aberp-digital-id" }
# S355 / PR-43 — defense-grade compliance subsystems (export-control, CUI,
# lot/heat, AVL, NIST 800-171; ADR-0071). Wired as a regular dep so later
# sessions can construct its types at firing sites; S355 itself adds only the
# `personnel.*` audit EventKinds (ADR-0073) and does not yet fire them. See
# `[[defense-aerospace-pivot]]`.
aberp-compliance = { path = "../../crates/aberp-compliance" }
aberp-billing = { path = "../../modules/billing" }
aberp-nav-transport = { path = "../../crates/nav-transport" }
# PR-9-0: runtime <InvoiceData> v3.0 invariant check per ADR-0022. Three
# call sites — issue_invoice::run, submit_invoice::run, retry_submission::run.
aberp-nav-xsd-validator = { path = "../../crates/nav-xsd-validator" }
# PR-44γ — MNB exchange-rate fetcher per ADR-0037 §2 (consumed via the
# `mnb_rates_provider` trait abstraction). The binary owns the
# production wiring (`LiveMnbRatesProvider`); the issuance path
# itself works against the trait so offline integration tests can
# inject a fake provider.
aberp-mnb-rates = { path = "../../crates/mnb-rates" }
# PR-60 / session-80 — needed for the `#[async_trait]` macro on
# `MnbRatesProvider`. The trait carries `async fn fetch_official_rate`
# and is consumed both via generic-`P` static dispatch (issuance
# pipeline) AND via `Box<dyn MnbRatesProvider>` (serve-route currency
# discriminator); `async-trait` preserves dyn-compatibility under
# native AFIT's RPITIT shape.
async-trait = { workspace = true }
# PR-44ε.1 — printed-invoice PDF renderer per ADR-0037 §1.a + ADR-0021
# "Print rendering path" (A152). The binary's `print_invoice`
# orchestrator builds `InvoiceModel` from the audit-ledger draft entry +
# the on-disk NAV XML + the per-tenant seller.toml and calls
# `aberp_invoice_pdf::render_invoice` for the PDF bytes.
aberp-invoice-pdf = { path = "../../crates/invoice-pdf" }
# S210 / PR-204 — quote-intake daemon (sister-service poll over a
# bearer-authed HTTP API, stages approved quotes as pending
# operator-pickup rows in `quote_intake_log`). Opt-in via the
# `ABERP_QUOTE_INTAKE_ENABLED=true` env var; when disabled the crate
# is dormant. Per [[aberp-versioning-policy]] this is the first
# Stage 2 module landing.
aberp-quote-intake = { path = "../../crates/aberp-quote-intake" }
# S279 / PR-265 — auto-quoting producer pipeline: the three pricing
# crates the daemon orchestrates. `aberp-quote-engine` is the pure
# scoring function (S268); `aberp-cad-extract-wrapper` is the Python
# subprocess shim (S270); `aberp-quote-pdf` is this PR's indicative-
# PDF renderer.
aberp-quote-engine = { path = "../../crates/aberp-quote-engine" }
aberp-cad-extract-wrapper = { path = "../../crates/aberp-cad-extract-wrapper" }
aberp-quote-pdf = { path = "../../crates/aberp-quote-pdf" }
# S279 / PR-265 — blake3 backs the `feature_graph_hash` idempotency key
# that the storefront's priced-writeback uses to detect retried POSTs
# (ADR-0004). The engine is pure so the hash is purely derived from the
# extracted FeatureGraph; same hash ⇒ same priced PDF ⇒ storefront 200
# idempotent replay.
blake3 = { workspace = true }
# S430 / ADR-0083 — AES-256-GCM AEAD for the CAD-blob-at-rest cipher
# (`crate::cad_blob`). New writes land encrypted; reads decrypt-to-temp
# before the Python extractor (which reads a file path) runs.
aes-gcm = { workspace = true }
# S229 / PR-225 — Stage 3 manufacturing-execution adapter framework
# (ADR-0060 Phase β). The binary owns the boot-time `AdapterRegistry`
# + per-adapter ledger-writer spawn. The first real adapter shipped
# is `BarcodeScannerAdapter` (TCP socket listener); opt-in via the
# `ABERP_BARCODE_SCANNER_ENABLED=true` env var (no seller.toml slot
# touched in PR-225 — that's filed for a follow-up PR per the
# [[seller-toml-write-invariant]] family preservation discipline).
aberp-mes = { path = "../../crates/aberp-mes" }
# S231 / PR-227 — Stage 3 Phase γ Inventory module v1 (ADR-0061). The
# binary owns the boot-time schema-ensure call on the per-tenant DuckDB
# + the products-list payload extension + the two new stock-movement
# routes (GET ledger + POST manual adjustment). Same path-dep posture
# as the sibling Stage 3 crate.
aberp-inventory = { path = "../../crates/aberp-inventory" }
# S232 / PR-228 — Stage 3 Phase γ Work Orders module v1 (ADR-0062). The
# binary owns the boot-time schema-ensure call + the work-order list /
# detail / transition routes + the BOM author route. Same posture as
# the inventory sibling.
aberp-work-orders = { path = "../../crates/aberp-work-orders" }
# S233 / PR-229 — Stage 3 Phase γ QA queue v1 (ADR-0063). The binary
# owns the boot-time schema-ensure call + the QA list / detail /
# decision routes + the per-routing-op Complete transition route.
aberp-qa = { path = "../../crates/aberp-qa" }
# S234 / PR-230 — Stage 3 Phase γ Dispatch board v1 (ADR-0064). The
# binary owns the boot-time schema-ensure call + the dispatch list /
# detail / create / mark-shipped / cancel routes + the eligible-WO
# read route. Closes the Stage 3 → Stage 1 loop. v1 production wires
# the `NoopInvoiceSpawner` per the PR-230 body's [[pushback-as-method]]
# divergence from ADR-0064 §5; PR-230b will land the sync billing
# extraction + the real spawner.
aberp-dispatch = { path = "../../crates/aberp-dispatch" }
# PR-44γ — decimal arithmetic for the EUR→HUF round-half-even
# conversion at the CLI boundary (the `aberp-billing` module is the
# arithmetic owner; the binary needs the type for the
# `aberp_billing::RateMetadata.rate` field at the call site).
rust_decimal = { workspace = true }

# Binary boundary: anyhow per ADR-0021 Part A item 2.
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# JSON input + (re-used) XML serialization
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }

# Time, hashing
time = { workspace = true }
sha2 = { workspace = true }

# ULID for the per-CLI-invocation session_id passed to
# `Actor::from_local_cli`. PR-7-A first use in the binary.
ulid = { workspace = true }

# Storage — the binary owns the tenant DuckDB connection so it can drive
# one transaction across `aberp-billing` and `aberp-audit-ledger` per
# ADR-0008 §Storage. PR-6 close-out.
duckdb = { workspace = true }

# S390/E — cross-process advisory file locks (flock / LockFileEx) for the
# per-invoice NAV-submission lock (`submission_lock.rs`). Same workspace
# `fs2` the audit-ledger mirror writer uses.
fs2 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# PR-7-B-3 additions.
#
# `tokio` is needed because the NAV operations in
# `aberp-nav-transport::operations` are async (reqwest's `Client::send`
# is async). The binary builds a current-thread runtime per
# `submit-invoice` invocation rather than tagging `main` with
# `#[tokio::main]` so the existing sync `issue-invoice` path is
# unchanged (no runtime startup overhead for the no-NAV flow). Feature
# set mirrors what the workspace catalogue pins; `rt` would suffice for
# the current-thread flavour but the catalogue is `rt-multi-thread` and
# inheriting cleanly is cheaper than diverging.
tokio = { workspace = true }

# PR-209 / S213 — `CancellationToken` consumed by every long-lived
# daemon (NAV poll, AP sync, quote-intake) so a Ctrl-C / window-close
# actually stops the backend instead of leaving zombie tokio tasks.
# Coordinator lives in `src/shutdown.rs`.
tokio-util = { workspace = true }

# S266 / PR-255 — the catalogue-push daemon (`src/catalogue_push.rs`)
# PUTs the material catalogue to the storefront over HTTPS. reqwest is
# already a transitive dep (nav-transport, quote-intake); promoting it to
# a direct dep lets the push live in the app where it can read the
# `quoting_materials` table + reach the on-write trigger in AppState.
reqwest = { workspace = true }

# `keyring` is needed in production because the binary's
# `setup-nav-credentials` subcommand WRITES to the keychain — the
# library `aberp-nav-transport` only owns the READ path
# (`NavCredentials::load_from_keychain`). Re-using the same crate that
# the read path uses keeps the platform-backend behaviour identical.
keyring = { workspace = true }

# PR-9-1 additions — wire protocol per ADR-0021 §Part B. The binary
# owns the loopback HTTPS server because the rest of the orchestration
# (DuckDB connection lifecycle, audit ledger, billing) is already on
# the binary side. A separate crate for the server would force the
# same coupling at module-boundary cost; per CLAUDE.md rule 2 we keep
# the simpler shape until a real second client wants the same routes.
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hex = { workspace = true }

# PR-16 additions — per-invoice export bundle per ADR-0029. The
# `export-invoice-bundle` orchestration lives in the binary because
# it consumes the existing audit-ledger crate's read surface
# (`Ledger::entries` + `Ledger::verify_chain`) and the existing
# per-payload audit_payloads structs. No new module-boundary surface
# is introduced — the bundle reader is read-only orchestration over
# the binary-side crates already in scope, per CLAUDE.md rule 3.
# base64 is needed to encode the entry payload bytes into the
# chain.jsonl manifest entries (per ADR-0029 §3's chain.jsonl line
# shape); workspace already pins base64 from PR-7-B-1.
base64 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }

# PR-92 additions — SMTP email delivery per ADR-0047.
#
# `lettre` is the SMTP client used by `email_invoice.rs` to send the
# rendered PDF (+ optional NAV XML) to the buyer's email. Workspace
# pin is `default-features = false` + rustls-only — there is no
# OpenSSL / native-tls in our dependency graph.
lettre = { workspace = true }
# `zeroize` is needed because the SMTP send path threads a
# `Zeroizing<String>` password through the keychain → lettre boundary
# (the password ends up in lettre's `Credentials::new` `String` arg,
# but the upstream `Zeroizing` wrapper still scrubs the buffer after
# the credentials object is dropped). Workspace already pins zeroize
# from PR-7-A's NAV-creds path.
zeroize = { workspace = true }

[dev-dependencies]
# Integration tests need `Actor::test_only` (rollback_conformance.rs).
# Enabling the feature here keeps it OUT of the production [dependencies]
# above — production code paths cannot reach `Actor::test_only`. F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger", features = ["test-support"] }

# S426 / ADR-0082 — the snapshot e2e/emission test seeds a DuckDB (invoice
# table + audit chain) and reads snapshot records back, exercising the
# crate API directly alongside `aberp::snapshot`'s audit emission.
aberp-snapshot = { path = "../../crates/aberp-snapshot" }
duckdb = { workspace = true }
time = { workspace = true }

# S161 — the NAV poll-daemon timer pins (`poll_ack.rs` two-phase
# schedule tests) use tokio's `#[tokio::test(start_paused = true)]`
# virtual clock so the 1/2/4/8/16/30/60 + 60s schedule is asserted
# deterministically in microseconds instead of real wall-time. The
# `test-util` feature is dev-only (Cargo unifies it onto the workspace
# tokio for test builds); production code cannot reach the paused clock.
tokio = { workspace = true, features = ["test-util"] }

# PR-44ε.1 — the `print_invoice` integration test renders a PDF via the
# `aberp_invoice_pdf` crate and then re-parses it for two assertions
# the production code does not need: the extracted text content
# (`pdf-extract`) and the page count (`lopdf::Document::load_mem`'s
# `Pages.Count`). Both crates are already workspace-pinned for the
# `crates/invoice-pdf` consumer; lifting them to dev-deps here costs
# zero new transitive crates.
lopdf = { workspace = true }
pdf-extract = { workspace = true }

# PR-185 / S185 — `print_invoice::tests::load_tenant_logo_*` synthesise
# minimal PNGs (RGB / oversized-dimension) to verify the corrupt-logo
# fallback and dimension-cap rejection paths. The `png` crate is
# already in the workspace via `crates/invoice-pdf`'s production deps,
# so lifting it to a dev-dep here adds no new transitive cost.
png = { workspace = true }

# PR-22 / ADR-0035 — the end-to-end writer-verifier round-trip test
# at `tests/verify_bundle_round_trip.rs` exercises the real
# `export_invoice_bundle::run` producer against `aberp_verify::
# verify_bundle`'s consumer. Dev-dep only — the production aberp
# binary does NOT depend on aberp-verify (the verifier is the
# inspector-side artifact per ADR-0035 §"Surfaced conflict 1"
# Reading A and lives outside the operator binary's trust
# boundary).
aberp-verify = { path = "../../crates/aberp-verify" }

# PR-235 / S241 — inherit workspace lint config.
[lints]
workspace = true
