[package]
name = "aberp-mes"
description = "Stage 3 manufacturing-execution adapter framework — canonical event vocabulary + Adapter trait + AdapterRegistry + audit-ledger integration (PR-224 / ADR-0060, Phase α). No real hardware code lands here; Phase β picks the first adapter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "aberp_mes"
path = "src/lib.rs"

[dependencies]
# Trait machinery — async-fn-in-trait that stays dyn-compatible per
# ADR-0060 §"Why #[async_trait] rather than native AFIT". Same crate
# every other ABERP async trait uses.
async-trait = { workspace = true }

# Async runtime — broadcast channel for per-adapter event fan-out per
# ADR-0006 §"Event bus" Phase 1 + ADR-0060 §"Why broadcast over mpsc".
# PR-225 / S229 extends with `io-util` for `BufReader` + `AsyncReadExt`
# inside the barcode-scanner adapter's per-connection reader loop;
# `rt` for `spawn_blocking` used by the ledger writer's per-event
# DuckDB-append surface.
tokio = { workspace = true, features = ["io-util", "rt"] }

# Error machinery — same crate every other ABERP crate uses.
thiserror = { workspace = true }

# Canonical-event serialization — JSON for the audit-ledger payload bytes
# (matches QuoteIntakePollPayload posture per S210 / PR-204).
serde = { workspace = true }
serde_json = { workspace = true }

# Audit-ledger writer surface — append_in_tx + EventKind::MesAdapterEvent
# per ADR-0060 §"Audit-ledger integration".
aberp-audit-ledger = { path = "../audit-ledger" }

# DuckDB Transaction is the type signature of write_mes_adapter_event —
# regular (not dev-only) dep because the audit-ledger writer surface
# rides the caller's `&Transaction<'_>` per ADR-0008 §"Storage". Same
# posture as `aberp-quote-intake::audit::write_poll_audit_entry`.
duckdb = { workspace = true }

# PR-225 / S229 (Phase β) — `CancellationToken` for the
# `BarcodeScannerAdapter`'s listener-task lifecycle + the
# `spawn_ledger_writer` runtime task. Same posture as quote-intake /
# AP sync / NAV poll daemons — child token races a recv / accept
# future via tokio::select.
tokio-util = { workspace = true }

# PR-225 / S229 — `time::OffsetDateTime::now_utc().format(&Rfc3339)`
# stamps the `at_iso8601` field on the BarcodeScannerAdapter's
# emitted ScanReceived events. Workspace pin (no chrono).
time = { workspace = true }

# PR-225 / S229 — `Ulid::new()` for the operator-decision idempotency
# key minted per ledger-writer ScanReceived emission.
ulid = { workspace = true }

# PR-225 / S229 — `tracing::{warn,error,info}` for adapter lifecycle +
# loud logs on RecvError::Lagged / bind failures / oversize-payload
# drops. Same posture as every other ABERP daemon.
tracing = { workspace = true }

# PR-240 / S247 — HTTP client for the MTConnect adapter's `/current`
# poll. Same workspace pin (rustls + gzip) every other ABERP HTTP
# caller uses (nav-transport, mnb-rates, aberp-quote-intake).
reqwest = { workspace = true }

# PR-240 / S247 — streaming XML parser for the MTConnect Streams 1.7
# `/current` response. Same workspace pin as nav-transport / mnb-rates
# / nav-xsd-validator; per ADR-0021 §A8 quick-xml is the project's
# XML toolkit.
quick-xml = { workspace = true }

[dev-dependencies]
# tokio test utilities — turn-on the test-util feature to drive paused
# clocks in lifecycle tests, plus net/sync/io for the TCP listener
# integration tests.
tokio = { workspace = true, features = ["test-util"] }

# PR-235 / S241 — inherit workspace lint config.
[lints]
workspace = true
